--- a/index.html
+++ b/index.html
@@ -151,8 +151,7 @@
                 <button data-target="q11">寫網頁前端(看的到部分)</button>
                 <button data-target="q14">做 APP 或網頁後端(看不到的地方做的事情)</button>
                 <button data-target="q19">遊戲設計</button>
-                <button data-target="todo">資料分析</button>
-                <button data-target="todo">人工智慧</button>
+                <button data-target="q23">機器學習與資料分析</button>
                 <button data-target="todo">區塊鏈</button>
                 <button data-target="todo">資訊安全</button>
                 <button data-target="q6-other">其他</button>
@@ -295,6 +294,16 @@
                 <li>建模相關：建模工具：Blender, 3dMAX, SketchUp</li>
                 <li>遊戲相關演算法：先把基本演算法學好</li>
                 <li>數學：建議至少線性代數要學好</li>
+                <li data-target="q1">回到第一頁</li>
+            </ul>
+        </div>
+        <div class="question" id="q23">
+            <div class="topic">推薦學習方向</div>
+            <ul class="answer">
+                <li>程式語言： Python 或 R</li>
+                <li>大數據：hadoop, spark</li>
+                <li>資料視覺化(依照學習的語言去查)</li>
+                <li>練習網站：Kaggle</li>
                 <li data-target="q1">回到第一頁</li>
             </ul>
         </div>
