--- a/index.html
+++ b/index.html
@@ -152,8 +152,7 @@
                 <button data-target="q14">做 APP 或網頁後端(看不到的地方做的事情)</button>
                 <button data-target="q19">遊戲設計</button>
                 <button data-target="q23">機器學習與資料分析</button>
-                <button data-target="todo">區塊鏈</button>
-                <button data-target="todo">資訊安全</button>
+                <button data-target="q24">資訊安全</button>
                 <button data-target="q6-other">其他</button>
             </div>
         </div>
@@ -304,6 +303,14 @@
                 <li>大數據：hadoop, spark</li>
                 <li>資料視覺化(依照學習的語言去查)</li>
                 <li>練習網站：Kaggle</li>
+                <li data-target="q1">回到第一頁</li>
+            </ul>
+        </div>
+        <div class="question" id="q24">
+            <div class="topic">推薦學習資源</div>
+            <ul class="answer">
+                <li><a href="https://www.facebook.com/pages/category/Community/108610697234232/">中山資安社</a></li>
+                <li><a href="https://gotyour.pw/resources.html">專業人員整理資安學習資源</a></li>
                 <li data-target="q1">回到第一頁</li>
             </ul>
         </div>
