--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 <body>
     <header>
         <h1>中山大學程式研習社 自學推薦</h1>
-        <p>歡迎加入更多想法，否則內容會很個人主觀</p>
+        <p>歡迎<a href="https://github.com/Rice9547/learn-code-guide">加入更多想法</a>，否則內容會很個人主觀</p>
     </header>
     <div class="questions">
         <div class="question" id="q1">
